test: add component test codes